# volbit

./: .gitignore  AGENTS.md  README.md  m1_core_engine.md  m2_research_analysis.md  m3_final_report.ipynb  m3_reproducibility_report.md  project-outline.md  pyproject.toml
.github/workflows/: quality-gates.yml
notebooks/: example_report.ipynb
scripts/: outline_analysis.py
src/volbit/: main.py
src/volbit/analytics/: __init__.py  diagnostics.py  option_pricing.py  regime_analysis.py  stylized_facts.py
src/volbit/calibration/: __init__.py  heston.py
src/volbit/data/: __init__.py  loader.py  preprocessing.py
src/volbit/experiments/: __init__.py  runner.py
src/volbit/simulation/: __init__.py  heston.py
tests/: test_calibration.py  test_ci_workflow.py  test_cli.py  test_data_loader.py  test_diagnostics.py  test_experiment_runner.py  test_option_pricing.py  test_outline_analysis_script.py  test_preprocessing.py  test_regime_analysis.py  test_report_notebook.py  test_simulation.py  test_stylized_facts.py
