[project]
name = "volbit"
version = "0.1.0"
description = "Stochastic Volatility Dynamics in Bitcoin via Coupled Langevin Equations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.0",
    "matplotlib>=3.10.0",
    "mypy>=1.19.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=9.0.2",
    "ruff>=0.13.0",
    "scikit-learn>=1.8.0",
    "scipy-stubs>=1.16.2.1",
]


[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
